# haskell-programming

./: .gitignore  .gitignore.txt  README.md  haskell_scraper.hs
Resources/: haskell_scraper.hs
ch10/: avgChars.hs  fibonacci.hs  processDB.hs  rewrite.hs  vowStop.hs
ch11/: asPatterns.hs  binaryTree.hs  constructingVals.hs  dogs.hs  jammin.hs  languageExercises.hs  livestockCounts.hs  phoneExercise.hs  razor.hs  records.hs  vehicles.hs  vigenereCipher.hs
ch12/: eitherLib.hs  eqCaseGuard.hs  maybeLib.hs  natural.hs  stringProcessing.hs  unfolds.hs
ch13/: doIO.hs  palindrome.hs  person.hs
ch13/call-em-up/: LICENSE  Main.hs  call-em-up.cabal
ch13/hangman/: hangman.cabal
ch13/hangman/src/: Hangman.hs  Main.hs
ch13/hello-haskell/: LICENSE  hello-haskell.cabal
ch13/hello-haskell/src/: Hello.hs  Main.hs
ch14/addition/: Addition.hs  addition.cabal
ch14/exercises/: exercises.cabal
ch14/exercises/src/: WordNumber.hs  arithmeticTest.hs  wordNumberTest.hs
ch14/morse/: morse.cabal
ch14/morse/src/: Main.hs  Morse.hs
ch14/morse/tests/: tests.hs
ch15/: exercises.hs  madLibs.hs  optional.hs  qc.hs
ch15/orphan-instance/: listy.hs  listyInstances.hs
ch16/: chapterExercises.hs  functorInstances.hs  functors.hs  liftingExercises.hs  replaceExperiment.hs
ch17/: applicative.hs  constantEx.hs  identityEx.hs  typeCheckEx.hs  validatePerson.hs
ch17/chapter-exercises/: chapter-exercises.cabal
ch17/chapter-exercises/src/: chapterExercises.hs  combinations.hs
ch17/check-applicative/: README.md  check-applicative.cabal
ch17/check-applicative/src/: Main.hs  ValidationEx.hs  apl1.hs  badMonoid.hs
ch18/: composition.hs  eitherMonad.hs  maybeMonad.hs  monad.hs
ch18/chapter-exercises/: chapter-exercises.cabal
ch18/chapter-exercises/src/: exercises.hs
ch18/check-monad/: README.md  check-monad.cabal
ch18/check-monad/src/: badMonad.hs
ch2/: Ch2.hs  FunctionsWithWhere.hs  ch2.hs  exercises.hs  funWithFuncs.hs  learn.hs
ch3/: ch3.hs  diffConcat.hs  globalLocal.hs  letterIndex.hs  listFuncs.hs  print1.hs  print2.hs  print3.hs  print3Flipped.hs  reverse.hs  stringFuncs.hs  thirdLetter.hs
ch4/: ch4.hs  changeMood.hs  combineTuples.hs  correctSyntax.hs  greetIfCool1.hs  greetIfCool2.hs  isPalindrome.hs  myAbs.hs
ch5/: arith3Broken.hs  curryingEg.hs  intToNum.hs  manualCurry.hs  sing.hs  typeChecking.hs  typeInference.hs  typeKwonDo.hs  typeSignatures.hs
ch6/: ch6.hs  eqInstances.hs  typeClassDemo.hs  typeKwonDo.hs  typeMatching.hs  usingShow.hs
ch7/: anonLambda.hs  arith2.hs  arith4.hs  bindExp.hs  caseExercises.hs  caseExpr.hs  chapterExercises.hs  composition.hs  greetIfCool3.hs  guards.hs  patternMatching.hs  penguins.hs  rankEmployee.hs  registeredUser.hs  tupleFunctions.hs
ch8/: integralDivision.hs  recursionExamples.hs  recursionExercises.hs  understandMaybe.hs  wordNumber.hs
ch9/: charExercises.hs  cipher.hs  filterExercises.hs  foldBool.hs  listComprehension.hs  listFuncs.hs  sepString.hs  spines.hs  standardFuncs.hs
cipher/: LICENSE  cipher.cabal
cipher/src/: caesarCipher.hs
