name:                cipher
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/trishasingh
license:             BSD3
license-file:        LICENSE
author:              Trisha Singh
maintainer:          trishasingh2696@gmail.com
copyright:           2019 Trisha Singh
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     CaesarCipher
                     , VigenereCipher
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
  hs-source-dirs:      src 
  default-language:    Haskell2010

executable cipher
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
  ghc-options:         -Wall -fwarn-tabs

test-suite tests
  ghc-options:         -Wall -fno-warn-orphans
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      tests 
  build-depends:       base
                     , cipher 
                     , QuickCheck
