name:                hangman
version:             0.1.0.0
synopsis:            Playing hangman
description:         Setting up my first project
homepage:            github.com/trishasingh
license:             BSD3
license-file:        LICENSE
author:              Trisha Singh
maintainer:          trishasingh2696@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

library
  exposed-modules:     Hangman 
  ghc-options:         -Wall -fwarn-tabs 
  build-depends:       base >= 4.7 && < 5
                     , random == 1.1
                     , split == 0.2.3.3
                     , QuickCheck
                     , hspec
  hs-source-dirs:      src 
  default-language:    Haskell2010

executable hangman
  ghc-options:         -Wall -fwarn-tabs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random == 1.1
                     , split == 0.2.3.3
                     , QuickCheck
                     , hspec
                     , hangman

test-suite tests
  ghc-options:         -Wall -fno-warn-orphans 
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  hs-source-dirs:      tests 
  build-depends:       base
                     , random == 1.1
                     , split == 0.2.3.3
                     , QuickCheck
                     , hspec 
                     , hangman   
