cabal-version:       >=1.10
name:                hello
version:             0.1.0.0
synopsis:            My first haskell project
description:         Says hello
license:             BSD3
license-file:        LICENSE
author:              tsingh
maintainer:          trishasingh2696@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md


library 
  exposed-modules:  Hello
  ghc-options:      -Wall -fwarn-tabs
  hs-source-dirs:   src
  build-depends:    base >= 4.7 && <5
  default-language: Haskell2010


executable hello-haskell
  main-is:          Main.hs
  other-modules:    Hello
  build-depends:    base >=4.12 && <4.13
                  , hello
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -fwarn-tabs

