name:                addition
version:             0.1.0.0
synopsis:            Simple addition library
description:         Intro to testing
homepage:            https://github.com/trishasingh
license:             BSD3
license-file:        LICENSE
author:              Trisha Singh
maintainer:          trishasingh2696@gmail.com
copyright:           2019 Trisha Singh
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Addition
  ghc-options:         -Wall -fwarn-tabs
  hs-source-dirs:      .
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , QuickCheck
