name:                exercises
version:             0.1.0.0
synopsis:            Ch14 exercises
description:         Haskell from First Principles
homepage:            https://github.com/trishasingh
license:             BSD3
license-file:        LICENSE
author:              Trisha Singh
maintainer:          trishasingh2696@gmail.com
copyright:           2019 Trisha Singh
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     WordNumber
                     , WordNumberTest
                     , ArithmeticTest
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , hspec
  ghc-options:         -Wall -fwarn-tabs

  
