name:                morse
version:             0.1.0.0
synopsis:            Morse code translator
description:         Intro to testing
homepage:            https://github.com/trishasingh
license:             BSD3
license-file:        LICENSE
author:              Trisha Singh
maintainer:          trishasingh2696@gmail.com
copyright:           2019 Trisha Singh
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Morse 
  ghc-options:         -Wall -fwarn-tabs 
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , QuickCheck
  hs-source-dirs:      src 
  default-language:    Haskell2010

executable morse
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , morse
                     , containers
                     , QuickCheck
  ghc-options:         -Wall -fwarn-tabs 

test-suite tests
  ghc-options:         -Wall -fno-warn-orphans
  type:                exitcode-stdio-1.0
  main-is:             tests.hs 
  hs-source-dirs:      tests
  build-depends:       base
                     , morse
                     , containers
                     , QuickCheck
  default-language:    Haskell2010
