name:                check-applicative
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/trishasingh/check-applicative#readme
license:             BSD3
license-file:        LICENSE
author:              Trisha Singh
maintainer:          trishasingh2696@gmail.com
copyright:           2019 Trisha Singh
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable check-applicative
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , checkers

